--- a/Petkit/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/Petkit/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -184,7 +184,7 @@
 
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-controller="authors" asp-action="index">
+                        <a class="nav-link" asp-controller="authors" asp-action="author">
                             <i class="mdi mdi-view-headline menu-icon"></i>
                             <span class="menu-title">Authors</span>
                         </a>
